# synd

./: .gitignore  LICENSE  Makefile  demo.ipynb  pyproject.toml
synd/: evaluation.py
syndkit/: base.py
syndkit/datasets/: cardio.py  obesity.py
syndkit/evaluation/: __init__.py  utility.py
syndkit/generators/: gaussian.py  strawman.py
tests/: conftest.py  test_tests.py
