[project]
name = "syndkit"
description = ""
authors = [{ name = "Andy Chisholm", email = "andy.chisholm.89@gmail.com" }]
requires-python = ">=3.11,<3.12"
version = "0.1"

dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "ipykernel",
    "mypy",
    "pytest",
    "pytest-cov"
]

models = [
    "sdv~=1.15.0",
    "scikit-learn~=1.3.2",
    "copulas~=1.16.0",
]

all = [
    "syndkit[dev,models]"
]

[project.scripts]
syndkit = "syndkit.cli:main"

[tool.setuptools.packages.find]
include = ["syndkit*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[build-system]
requires = ["setuptools>=65.3.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
enable_error_code = "ignore-without-code"
files = ["syndkit"]
show_error_codes = true
warn_unused_ignores = true

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["synd"]
omit = ["*/__init__.py"]